<resources>
    <string name="preference_file_key" translatable="false">fr.themsou.monitorinternetless.PREFERENCE_FILE_KEY</string>
    <string name="app_name" translatable="false">Monitor Internetless</string>
    <string name="title_numbers">Numéros</string>
    <string name="title_numbers_full">Numéros Autorisés</string>
    <string name="title_commands">Commandes</string>
    <string name="title_settings">Paramètres</string>
    <string name="menu_about">À Propos</string>
    <string name="button_more">Plus</string>
    <string name="numberstab_description">Sélectionnez ici tous les numéros qui auront la permission de contrôler et de récupérer des informations sur votre téléphone par SMS. Vous pouvez définir un mot de passe dans les paramètres.</string>
    <string name="numberstab_addnumber">Ajouter un numéro</string>
    <string name="number_already_exist">Ce numéro a déjà été ajouté</string>
    <string name="addnumber_capture">Saisir le numéro</string>
    <string name="addnumber_contact">Depuis les contacts</string>
    <string name="number_input_owner">Nom</string>
    <string name="number_input_number">Numéro</string>
    <string name="number_do_not_have_number">Ce contact n\'a pas de numéro de téléphone</string>
    <string name="command_desc_info">Envoie des informations sur le téléphone : niveau de batterie, dernière position etc.</string>
    <string name="command_title_info" translatable="false">!info</string>
    <string name="command_title_locate" translatable="false">!locate</string>
    <string name="command_title_ring">!ring [durée en secondes]</string>
    <string name="command_desc_ring">Fait sonner le téléphone pour 10 secondes. Si un argument est fournis, il définira la durée de sonnerie. "!ring 120" fera sonner le téléphone durant 2 minutes.</string>
    <string name="command_desc_locate">Envoie la position du téléphone (le GPS doit être activé).</string>
    <string name="commandstab_description">Liste des commandes disponibles. Pour les exécuter, il faut les envoyer à ce téléphone par SMS avec un numéro autorisé.\nPar exemple, le message \"!locate\" va demander la localisation du téléphone, qui sera renvoyée par SMS.</string>
    <string name="command_error_no_permission">L\'application n\'a pas les permissions nécessaires pour exécuter cette commande.</string>
    <string name="command_error_not_enabled">Cette commande n\'a pas été activé dans l\'application.</string>
    <string name="error_no_permission">L\'application ne peut pas recevoir ou envoyer de SMS. L\'application ne poura donc pas exécuter les commandes envoyés par SMS</string>
    <string name="error_no_permission_title">Autorisations non acceptés</string>
    <string name="message_ok">OK</string>
    <string name="message_retry">Réessayer</string>
    <string name="message_add">Ajouter</string>
    <string name="message_cancel">Annuler</string>
    <string name="message_reject">Refuser</string>
    <string name="add_number_title">Ajouter un numéro</string>
    <string name="add_number_dialog">Saisissez le numéro à ajouter</string>
    <string name="restart_title">Application des modifications</string>
    <string name="restart_dialog">L\'application va redémarer pour appliquer les modifications et mettre en place le recepteur de messages.</string>
    <string name="error_open_permission_settings">Vous devez autoriser l\'application à modifier les paramètres du système (activer le GPS, les donnés mobiles etc.) pour que certaines fonctionnalités fonctionnent correctement.</string>
    <string name="setting_password_title">Mot de passe</string>
    <string name="setting_password_description">Demande d\'entrer le mot de passe avec !login lorsque une personne essaye d\'envoyer des commandes. Toutes les autorisations sont révoqués au lancement de l\'application.</string>
    <string name="setting_everyone_allowed_title">Autoriser tous les numéros</string>
    <string name="setting_everyone_allowed_description">N\'importe qui pourra envoyer des commandes sur votre téléphone. Il est conseillé d\'activer la fonction de mot de passe si vous activez celle-ci.</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="app_version">Version 1.0.4</string>
    <string name="developer">Développeur : <a href="https://github.com/ClementGre">Clément Grennerat</a></string>
    <string name="github">GitHub : <a href="https://github.com/ClementGre/Monitor-Internetless">ClementGre/Monitor-Internetless</a></string>
    <string name="issue"><a href="https://github.com/ClementGre/Monitor-Internetless/issues/new">Signaler un Bug</a></string>
    <string name="mail" translatable="false"><a href="mailto:clement.grennerat@free.fr">clement.grennerat@free.fr</a></string>
    <string name="command_password_required">Un mot de passe est requis, authentifiez-vous avec !login [Mot de passe]</string>
    <string name="command_logged_in">Vous êtes authentifiés : vous pouvez maintenant envoyer des commandes !</string>
    <string name="command_wrong_password">Le mot de passe ne correspond pas !\nEnvoyez \"!login [Mot de passe]\" en remplaçant [Mot de passe] par le mot de passe que vous avez définis dans l\'application.</string>
    <string name="command_password_help">Envoyez \"!login [Mot de passe]\" en remplaçant [Mot de passe] par le mot de passe que vous avez définis dans l\'application.</string>
    <string name="unknown">Inconnue</string>
    <string name="info_enabled">Activé</string>
    <string name="info_disabled">Désactivé</string>
    <string name="info_battery">Batterie</string>
    <string name="info_celular">Données mobiles</string>
    <string name="info_power_saver">Économie d\'énergie</string>
    <string name="info_last_location">Dernière position</string>
    <string name="info_gps_disabled">GPS désactivé</string>
    <string name="info_accuracy">Précision</string>
    <string name="info_location_unknown">Position inconnue</string>
    <string name="info_error_gps_disabled">Le GPS est désactivé : impossible de récupérer la position.</string>
    <string name="info_localizing">Localisation en cours…\nL\'opération peut prendre jusqu\'à une minute</string>
    <string name="info_latitude">Latitude</string>
    <string name="info_longitude">Longitude</string>
    <string name="info_bearing">Direction</string>
    <string name="info_speed">Vitesse</string>
    <string name="notificationchannel_ring_title">Sonnerie</string>
    <string name="notificationchannel_ring_description">Notification pour alerter de la sonnerie du téléphone avec la commande !ring</string>
    <string name="notificationchannel_locate_title">Localisation</string>
    <string name="notificationchannel_locate_description">Notification pour alerter d\'une localisation en cours pour la commande !locate</string>
    <string name="dialog_battery_optimization_title">Optimisation de la batterie</string>
    <string name="dialog_battery_optimization_message">Si vous rencontrez des problèmes d\'exécution des commandes, essayez de désactiver l\'optimisation de la batterie pour cette application.</string>
    <string name="message_ignore">Ignorer</string>
    <string name="locate_notification_title">Localisation en cours</string>
    <string name="locate_notification_text">Une commande \"!locate\" entraîne une localisation de l\'appareil...</string>
    <string name="ring_notification_title">Sonnerie</string>
    <string name="ring_notification_text">Le téléphone sonne ! Appuyez pour couper le son.</string>
    <string name="ring_reply_message_seconds">Le téléphone sonne pour %1$d secondes !</string>
    <string name="ring_reply_message">Le téléphone sonne pour %1$d minutes et %2$d secondes !</string>
    <string name="ring_error">Impossible de faire sonner le téléphone</string>
    <string name="unused_app_restrictions_whitelist_dialog_title">Restrictions d\'application inutilisée</string>
    <string name="unused_app_restrictions_whitelist_dialog_message">La non utilisation prolongée de Monitor Internetless peut provoquer la suppression automatique des autorisations de localisation ou de lecture des messages. Vous pouvez désactiver cette option dans les paramètres de l\'application.</string>
    <string name="locate_timeout">Demande de localisation expirée (timeout)</string>
    <string name="locate_network_alternative">La localisation GPS semble lente.\nVoici la localisation réseau :</string>
    <string name="locate_network_replacement">Le GPS est désactivé.\nVoici une localisation réseau approximative :</string>
    <string name="dialog_permission_sms_title">Accès aux SMS</string>
    <string name="dialog_permission_sms_message">Les commandes étant envoyées par SMS, Monitor Internetless a besoin de pouvoir recevoir, lire et envoyer des SMS. Ces données ne sont utilisées que pour les commandes de l\'application et seuls les messages contenant le mot clé d\'une commande seront lus.</string>
    <string name="dialog_permission_location_message">Cette commande nécessite à Monitor Internetless d\'accéder à votre localisation, même en arrière plan. La localisation ne sera utilisée que lors de l\'exécution d\'une commande de localisation, et ne sera pas enregistrée.</string>
    <string name="dialog_permission_location_title">Accès à la localisation</string>

</resources>