<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_numbers">

    <fragment
        android:id="@+id/navigation_numbers"
        android:name="fr.themsou.monitorinternetless.ui.numbers.NumbersFragment"
        android:label="@string/title_numbers"
        tools:layout="@layout/fragment_numbers" />

    <fragment
        android:id="@+id/navigation_commands"
        android:name="fr.themsou.monitorinternetless.ui.commands.CommandsFragment"
        android:label="@string/title_commands"
        tools:layout="@layout/fragment_commands" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="fr.themsou.monitorinternetless.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>