<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListView
        android:id="@+id/numbers_listview"
        android:choiceMode="multipleChoice"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/action_button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:contentDescription="@string/numberstab_addnumber"
        app:menu_showShadow="true"
        app:menu_openDirection="up">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_add_number_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_perm_contact_calendar_24"
            android:tint="@color/colorPrimary"
            app:menu_showShadow="true"
            app:fab_size="mini"
            app:fab_label="@string/addnumber_contact"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_add_number_manually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_text_fields_24"
            app:menu_showShadow="true"
            app:fab_size="mini"
            app:fab_label="@string/addnumber_capture"/>

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
